# aprover

./: .gitignore  LICENSE  PIPELINE.md  PLAN_autonomous_mode.md  README.md  RQ1_FINDINGS_MASTER.md  flake.nix  main.tex  pyproject.toml  references.bib
amc/: __init__.py  artifacts.py  bmc_engine.py  bug_reporter.py  cbmc.py  cex_validator.py  cli.py  config.py  dynamic_validator.py  harness_generator.py  llm.py  parser.py  pipeline.py  preprocessor.py  spec.py  spec_generator.py  spec_quality.py
aprover/: __init__.py  cli.py
bmc_agent/: acsl.py  acsl_cli.py  acsl_native.py  adjacent_follower.py  agent_registry.py  agent_telemetry.py  agentic_harness_gen.py  artifacts.py  assert_driven_specs.py  auto_retry_registry.py  bmc_engine.py  boundary_detector.py  bug_hunt.py  bug_reporter.py  cbmc.py  cbmc_error_classifier.py  cex_validator.py  cli.py  config.py  domain_analyzer.py  dsl_to_cbmc.py  dynamic_validator.py  eta.py  feedback_loop.py  flag_selector.py  fp_pattern_detector.py  frama_c.py  global_invariants.py  harness_generator.py  harness_refiner.py  inlining_advisor.py  java_parser.py  jbmc.py  jml_specs.py  json_utils.py  judge_pipeline.py  kani.py  llm.py  llm_judge.py  llm_tool_loop.py  (+33 more)
docs/: agent_telemetry_and_soundness.md  agentic_hardening_plan.md  planning_agent_plan.md  realism_enforcement_plan.md
examples/: block_device.c  ic3_bench.c  max_bench.c  memory_allocator.c  sensor_hub.c  simple_driver.c  threat_model_context.template.md  threat_model_note.template.md
experiments/: agent_ablation_plan.md
findings/: CONFIRMED_BUGS_2026-05-22.md  JUDGMENT_NOTES.md  PLAN_validity_protocol_split.md  SESSION_SUMMARY_2026-05-21.md  (+33 more)
(+655 files in other folders)
